package data;

public class ChessDataBase {
//    TODO Here use to be a database which contain history of last game
}
