package data;

import domain.enteties.ChessPiece;

public class ChessMapper {
    public ChessPieceDbEntity chessPieceToDbPiece(ChessPiece chessPiece) {
//        TODO  Here use to be a function that converts entity from domain to data module
        return null;
    }

    public ChessPiece chessPieceDbToChessPiece(ChessPieceDbEntity chessPiece) {
//       TODO Here use to be a function that converts entity from data to domain module
        return null;
    }
}
