package data;

import domain.enteties.ChessPiece;
import domain.enteties.Position;
import domain.enteties.pieces.Rook;
import domain.repository.ChessRepository;

public class ChessRepositoryImpl implements ChessRepository {
    @Override
    public void newGame() {
//        TODO Here use to be a function for useCase
    }

    @Override
    public void finishGame() {
//        TODO Here use to be a function for useCase
    }

    @Override
    public void undoLastMove() {
//        TODO Here use to be a function for useCase
    }

    @Override
    public void makeMove(ChessPiece chessPiece, Position position) {
//        TODO Here use to be a function for useCase
    }

    @Override
    public void kickPiece(ChessPiece chessPiece, Position position) {
//        TODO Here use to be a function for useCase
    }

    @Override
    public void makeCastling(Rook rook, Position position) {
//        TODO Here use to be a function for useCase
    }
}
